@@ -166,6 +166,7 @@ REL1_10_9: (released ...)
 - Added 'Magic Words' document for tracking all Magic Words, Tags and Parser Functions supported
 - Added 'NS_FILESYSTEM' to 'off-limits' for RegexNamespaceContext functionality.
 TODO!!! FileManager: Corrected issue with 'auto-summary' fix (usage of wrong bitwise operator)
-- Geshi: added 'js' tag for Javascript
+- Geshi: added 'js' & 'css' tags for Javascript & CSS contents
 - Added parser function 'gettagsection' to MiscParserFunctions extension
+- Added 'RawPageTools' extension
 - 
